# watchpower-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: complex_daily_data_query.py  daily_data_querying.py  get_connected_devices.py  simple_daily_data_query.py
schemas/: daily_data_schema.json
watchpower_api/: __init__.py  models.py
