[tool.poetry]
name = "watchpower-api"
version = "0.1.0"
description = "WatchPower Rest-API client in Python"
authors = ["David Freire <davidsmfreire@gmail.com>"]
readme = "README.md"
packages = [{include = "watchpower_api"}]

[tool.poetry.dependencies]
python = ">3.8"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
